# Dealer3

./: CLAUDE.md  README.md
dealer/: Cargo.toml
dealer-core/: Cargo.toml
dealer-core/src/: hand.rs
dealer-dds/: Cargo.toml
dealer-parser/src/: parser.rs
dealer-pbn/src/: deal.rs  formatters.rs  oneline.rs
docs/: WINDOWS_BUILD_SUMMARY.md
scripts/windows/: build-windows.sh
