[package]
name = "dealer-dds"
version = "1.0.0"
edition = "2021"
license = "Unlicense"

[features]
debug_mtdf = []
debug_fast = []
debug_search = []
no_tricks_pruning = []
no_fast_tricks = []
no_slow_tricks = []

[dependencies]
dealer-core = { path = "../dealer-core" }
bridge-solver = { git = "https://github.com/bridge-craftwork/bridge-solver" }
